Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -71,11 +71,15 @@
    * [FeedsFAQ_v1 Feed FAQ]
    * [FeedAssessments_v1 Assessments]
     * [FeedsBotnet_v1 Botnet]
+    * [FeedEmail_v1 Email]
+    * [FeedFastflux_v1 Fastflux]
     * [FeedsMalware_v1 Malware]
     * [FeedsPhishing_1 Phishing]
     * [FeedsScanners_v1 Scanners]
     * [FeedsSpam_v1 Spam]
     * [FeedSpamvertising_v1 Spamvertising]
+    * [FeedSuspicious_v1 Suspicious]
+    * [FeedWhitelists_v1 Whitelists]
   * Cookbook
    * [AddingFeeds_v1 Adding New Feeds]
   * [FAQ_v1 FAQ]
