Edited wiki page FeedAssessments_v1 through web user interface.

--- a/wiki/FeedAssessments_v1.wiki
+++ b/wiki/FeedAssessments_v1.wiki
@@ -20,7 +20,16 @@ Type:
 
 Assessment:
 
- * 
+ * Botnet
+ * Email
+ * Fastflux
+ * Malware
+ * Phishing
+ * Scanners
+ * Spam
+ * Spamvertising
+ * Suspicious
+ * Whitelists
 
 Confidence:
 
