Edited wiki page FeedsPhishing_1 through web user interface.

--- a/wiki/FeedsPhishing_1.wiki
+++ b/wiki/FeedsPhishing_1.wiki
@@ -21,9 +21,9 @@ Typically addresses that have been enumerated from phishing domains. Confidence 
 
 === API ===
 {{{
-GET https://cif.example.com:443/api/infrastructure/phishing?confidence=95&severity=medium&apikey=XXX
-GET https://cif.example.com:443/api/infrastructure/phishing?confidence=85&severity=medium&apikey=XXX
-GET https://cif.example.com:443/api/infrastructure/phishing?confidence=65&severity=medium&apikey=XXX
+GET https://cif.example.com:443/api/infrastructure/phishing?confidence=95&apikey=XXX
+GET https://cif.example.com:443/api/infrastructure/phishing?confidence=85&apikey=XXX
+GET https://cif.example.com:443/api/infrastructure/phishing?confidence=65&apikey=XXX
 }}}
 
 === CLI ===
@@ -39,9 +39,9 @@ $ cif -q infrastructure/phishing -c 95 -p iptables
 Typically addresses that have been enumerated from a phishing url. Confidence tends to be lower than that of a more specific phishing url.
 === API ===
 {{{
-GET https://cif.example.com:443/api/domain/phishing?confidence=95&severity=medium&apikey=XXX
-GET https://cif.example.com:443/api/domain/phishing?confidence=85&severity=medium&apikey=XXX
-GET https://cif.example.com:443/api/domain/phishing?confidence=65&severity=medium&apikey=XXX
+GET https://cif.example.com:443/api/domain/phishing?confidence=95&apikey=XXX
+GET https://cif.example.com:443/api/domain/phishing?confidence=85&apikey=XXX
+GET https://cif.example.com:443/api/domain/phishing?confidence=65&apikey=XXX
 }}}
 
 === CLI ===
@@ -56,9 +56,9 @@ $ cif -q domain/phishing -c 95 -p bindzone
 ----
 === API ===
 {{{
-GET https://cif.example.com:443/api/url/phishing?confidence=95&severity=medium&apikey=XXX
-GET https://cif.example.com:443/api/url/phishing?confidence=85&severity=medium&apikey=XXX
-GET https://cif.example.com:443/api/url/phishing?confidence=65&severity=medium&apikey=XXX
+GET https://cif.example.com:443/api/url/phishing?confidence=95&apikey=XXX
+GET https://cif.example.com:443/api/url/phishing?confidence=85&apikey=XXX
+GET https://cif.example.com:443/api/url/phishing?confidence=65&apikey=XXX
 }}}
 
 === CLI ===
@@ -75,9 +75,9 @@ Typically reply-to type drop boxes used in phishing attempts.
 
 === API ===
 {{{
-GET https://cif.example.com:443/api/email/phishing?confidence=95&severity=medium&apikey=XXX
-GET https://cif.example.com:443/api/email/phishing?confidence=85&severity=medium&apikey=XXX
-GET https://cif.example.com:443/api/email/phishing?confidence=65&severity=medium&apikey=XXX
+GET https://cif.example.com:443/api/email/phishing?confidence=95&apikey=XXX
+GET https://cif.example.com:443/api/email/phishing?confidence=85&apikey=XXX
+GET https://cif.example.com:443/api/email/phishing?confidence=65&apikey=XXX
 }}}
 
 === CLI ===
