--- a/wiki/Utilities_v1.wiki
+++ b/wiki/Utilities_v1.wiki
@@ -14,6 +14,35 @@
 
 == cif_crontool ==
 
+cif_crontool is used to call cif_smrt. It's similar to cron, as in it:
+
+ # traverses /opt/cif/etc to find files that end if .cfg
+ # loads up the various sections within each .cfg
+ # tells cif_smrt what to do based on those configs
+
+for instance; if you have the following config:
+
+{{{
+[phishtank]
+guid = everyone
+feed = 'http://data.phishtank.com/data/online-valid.json.gz'
+assessment = 'phishing url'
+source = 'phishtank.com'
+fields = 'url,target,phish_detail_url,submission_time'
+fields_map = 'address,description,alternativeid,detecttime'
+severity = 'medium'
+confidence = 85
+period = hourly
+restriction = 'need-to-know'
+alternativeid_restriction = 'public'
+first_run = true
+}}}
+
+cif_crontool tells cif_smrt to run the following command:
+{{{
+$ cif_smrt -c /opt/cif/etc/custom.cfg -T medium -f phishtank
+}}}
+
 == cif_feed ==
 
 == cif_skel ==
