Edited wiki page Utilities_v1 through web user interface.

--- a/wiki/Utilities_v1.wiki
+++ b/wiki/Utilities_v1.wiki
@@ -12,6 +12,10 @@
 
 == cif_apikeys ==
 
+{{{
+$ cif_apikeys -h
+}}}
+
 == cif_crontool ==
 
 cif_crontool is used to call cif_smrt. It's similar to cron, as in it:
