--- a/wiki/ServerInstall_Dbi_v1.wiki
+++ b/wiki/ServerInstall_Dbi_v1.wiki
@@ -3,10 +3,15 @@
 = Introduction =
 
 * Table of Contents *
-<wiki:toc max_depth="3" />
-
+<wiki:toc max_depth="2" />
 
 = Details =
+== Required Dependencies ==
+----
+ * (unstable) [ServerInstall_Dbi_DebianSqeeze_v1 Debian Squeeze]
+ * (unstable) [ServerInstall_Dbi_Ubuntu12_v1 Ubuntu12]
+ * (unstable) [ServerInstall_Dbi_RHEL6_v1 RHEL6/CentOS6]
+
 == Install Library ==
  # download the latest libcif-dbi [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:v1+libcifdbi package]
 {{{
@@ -15,9 +20,9 @@ $ cd libcif-dbi-v1-XXX
 $ ./configure && make testdeps
 $ sudo make install
 }}}
-= Examples =
+== Examples ==
 -----
-== Configs ==
+=== Configs ===
 the application user must have a a cif config it can read, for example if it's a web application, a /etc/apache/mycif.conf could be created with the following:
 {{{
 [db]
