Edited wiki page ServerInstall_Dbi_v1 through web user interface.

--- a/wiki/ServerInstall_Dbi_v1.wiki
+++ b/wiki/ServerInstall_Dbi_v1.wiki
@@ -1,5 +1,9 @@
 #summary installing the dbi component in stand-alone mode
 
+<font color='red'>
+UNDER CONSTRUCTION
+</font>
+
 = Introduction =
 
 * Table of Contents *
