Edited wiki page ServerInstall_Router_v1 through web user interface.

--- a/wiki/ServerInstall_Router_v1.wiki
+++ b/wiki/ServerInstall_Router_v1.wiki
@@ -1,4 +1,4 @@
-#summary installing the dbi component in stand-alone mode
+#summary installing the router component in standalone mode
 
 <font color='red'>
 UNDER CONSTRUCTION
