--- a/wiki/ServerInstall_Router_v1.wiki
+++ b/wiki/ServerInstall_Router_v1.wiki
@@ -14,7 +14,7 @@ UNDER CONSTRUCTION
 ----
  * (unstable) [RouterInstall_DebianSqueeze_v1 Debian Squeeze]
  * (unstable) [RouterInstall_Ubuntu12_v1 Ubuntu12]
- * (unstable) [RouterInstall_RHEL6_v1 RHEL6/CentOS6]
+ * (unstable) [RouterInstall_CentOS6_v1 CentOS6]
 
 == Install Library ==
  # download the latest libcif-dbi [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:v1+router package]
