Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -52,12 +52,11 @@
    * [Tools_crontool_v0 CIF Crontool]
    * [Tools_cif_apikeys_v0 CIF Apikeys]
  * v1 (Development -- testing)
-  * [WhatisCIF Server]
-   * [ServerInstall_v1 Server Install v1]
+  * [ServerInstall_v1 Server]
    * [CIFInfrastructureDiagram Distributed Environment]
-    * [ServerInstall_Router_v1 Standalone Router]
-    * [ServerInstall_Smrt_v1 Standalone Smrt]
-    * [ServerInstall_Dbi_v1 Database Interface]
+    * [RouterInstall_v1 Standalone Router]
+    * [SmrtInstall_v1 Standalone Smrt]
+    * [DbiInstall_v1 Database Interface]
    * [ServerBackup_v1 Backup]
    * [GroupSupport_v1 Group Support]
    * [RTCIFMinimal_v1 RT Plugin]
