--- a/wiki/SmrtInstall_v1.wiki
+++ b/wiki/SmrtInstall_v1.wiki
@@ -14,7 +14,7 @@ UNDER CONSTRUCTION
 ----
  * (unstable) [ServerInstall_Smrt_DebianSqueeze_v1 Debian Squeeze]
  * (unstable) [ServerInstall_Smrt_Ubuntu12_v1 Ubuntu12]
- * (unstable) [ServerInstall_Smrt_RHEL6_v1 RHEL6/CentOS6]
+ * (unstable) [ServerInstall_Smrt_CentOS6_v1 CentOS6]
 
 == Install Library ==
  # download the latest smrt [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:v1+smrt package]
