--- a/wiki/DbiInstall_v1.wiki
+++ b/wiki/DbiInstall_v1.wiki
@@ -12,9 +12,9 @@ UNDER CONSTRUCTION
 = Details =
 == Required Dependencies ==
 ----
- * (unstable) [ServerInstall_Dbi_DebianSqueeze_v1 Debian Squeeze]
- * (unstable) [ServerInstall_Dbi_Ubuntu12_v1 Ubuntu12]
- * (unstable) [ServerInstall_Dbi_RHEL6_v1 RHEL6/CentOS6]
+ * (unstable) [DbiInstall_DebianSqueeze_v1 Debian Squeeze]
+ * (unstable) [DbiInstall_Ubuntu12_v1 Ubuntu12]
+ * (unstable) [DbiInstall_CentOS6_v1 CentOS6]
 
 == Install Library ==
  # download the latest libcif-dbi [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:v1+libcifdbi package]
