--- a/wiki/DbiInstall_CentOS6_v1.wiki
+++ b/wiki/DbiInstall_CentOS6_v1.wiki
@@ -29,42 +29,4 @@ $ sudo adduser cif
 {{{
 $ sudo chmod 770 /home/cif
 }}}
-
-=== Install Library ===
- # download the latest libcif-dbi [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:v1+libcifdbi package]
-{{{
-$ tar -xzvf libcif-v1-XXX.tar.gz
-$ cd libcif-dbi-v1-XXX
-$ ./configure && make testdeps
-$ sudo make install
-}}}
-== Examples ==
------
-=== Configs ===
-the application user must have a a cif config it can read, for example if it's a web application, a /etc/apache/mycif.conf could be created with the following:
-{{{
-[db]
-host = 127.0.0.1
-user = postgres
-password =
-database = cif
-}}}
-=== Paths ===
-In order for an application to leverage the CIF libraries, the '/opt/cif/lib' path must be added to the application.
-{{{
-#!/usr/bin/perl
-
-use strict;
-
-# fix lib paths
-BEGIN {
-        unshift @INC, "/opt/cif/lib";
-}
-
-my ($err,$ret) = CIF::Profile->new({
-    config  => '/etc/apache/mycif.conf',
-});
-die($err) if($err);
-my $profile = $ret;
-...
-}}}
+ # continue installing the [DbiInstall_v1#Install_Library library]
