Edited wiki page DbiInstall_CentOS6_v1 through web user interface.

--- a/wiki/DbiInstall_CentOS6_v1.wiki
+++ b/wiki/DbiInstall_CentOS6_v1.wiki
@@ -29,4 +29,4 @@ $ sudo adduser cif
 {{{
 $ sudo chmod 770 /home/cif
 }}}
- # continue installing the [DbiInstall_v1#Install_Library library]
+ # continue with the [DbiInstall_v1#Install_Library install]
