Edited wiki page DbiInstall_Ubuntu12_v1 through web user interface.

--- a/wiki/DbiInstall_Ubuntu12_v1.wiki
+++ b/wiki/DbiInstall_Ubuntu12_v1.wiki
@@ -28,3 +28,4 @@ Create your "cif" user/group (the configure script will default to this user "ci
 {{{
 $ sudo adduser --disabled-password --gecos '' cif
 }}}
+ # continue with the [DbiInstall_v1#Install_Library install]
