--- a/wiki/DbiInstall_Ubuntu12_v1.wiki
+++ b/wiki/DbiInstall_Ubuntu12_v1.wiki
@@ -24,7 +24,7 @@ $ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::DNS::Match'
 == System Setup ==
 -----
 === Default CIF user ===
-Create your "cif" user/group (the configure script will default to this user "cif") that will own the application (/opt/cif).
+ # Create your "cif" user/group (the configure script will default to this user "cif") that will own the application (/opt/cif).
 {{{
 $ sudo adduser --disabled-password --gecos '' cif
 }}}
