Edited wiki page SmrtInstall_v1 through web user interface.

--- a/wiki/SmrtInstall_v1.wiki
+++ b/wiki/SmrtInstall_v1.wiki
@@ -1,7 +1,7 @@
 #summary installing the smrt component in standalone mode
 
 <font color='red'>
-UNDER CONSTRUCTION
+=UNDER CONSTRUCTION=
 </font>
 
 = Introduction =
