Edited wiki page DbiInstall_v1 through web user interface.

--- a/wiki/DbiInstall_v1.wiki
+++ b/wiki/DbiInstall_v1.wiki
@@ -1,7 +1,7 @@
 #summary installing the dbi component in stand-alone mode
 
 <font color='red'>
-UNDER CONSTRUCTION
+=UNDER CONSTRUCTION=
 </font>
 
 = Introduction =
