--- a/wiki/RouterInstall_v1.wiki
+++ b/wiki/RouterInstall_v1.wiki
@@ -4,18 +4,12 @@
 =UNDER CONSTRUCTION=
 </font>
 
-* Before you Begin *
+= Introduction =
 
 * Table of Contents *
 <wiki:toc max_depth="2" />
 
-= Preamble =
-----
- * A semi-complete [ChangeLog_v1 ChangeLog] of v1
- * A list of known [KnownIssues_v1 issues] for v1
-
-== Caveats ==
-= Installation =
+= Details =
 == Required Dependencies ==
  * (unstable) [RouterInstall_DebianSqueeze_v1 Debian Squeeze] 
  * (unstable) [RouterInstall_Ubuntu12_v1 Ubuntu 12] 
