--- a/wiki/SmrtInstall_v1.wiki
+++ b/wiki/SmrtInstall_v1.wiki
@@ -12,9 +12,9 @@
 = Details =
 == Required Dependencies ==
 ----
- * (unstable) [ServerInstall_Smrt_DebianSqueeze_v1 Debian Squeeze]
- * (unstable) [ServerInstall_Smrt_Ubuntu12_v1 Ubuntu12]
- * (unstable) [ServerInstall_Smrt_CentOS6_v1 CentOS6]
+ * (unstable) [SmrtInstall_DebianSqueeze_v1 Debian Squeeze]
+ * (unstable) [SmrtInstall_Ubuntu12_v1 Ubuntu12]
+ * (unstable) [SmrtInstall_CentOS6_v1 CentOS6]
 
 == Install Library ==
  # download the latest smrt [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:v1+smrt package]
