--- a/wiki/SmrtInstall_DebianSqueeze_v1.wiki
+++ b/wiki/SmrtInstall_DebianSqueeze_v1.wiki
@@ -21,4 +21,4 @@ $ aptitude -y install sudo vim
 {{{
 $ sudo aptitude -y install apache2 apache2-threaded-dev libapache2-mod-perl2 libapache2-request-perl libapache2-mod-gnutls libapreq2-dev libapr1-dbg
 }}}
- # Continue with the cif-router [RouterInstall_v1#Package installation]
+ # Continue with the cif-smrt [SmrtInstall_v1#Package installation]
