Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -58,8 +58,8 @@
    * [Utilities_v1 Utilities]
    * [MigrateApikeys_v1 API key migration]
    * [CIFInfrastructureDiagram Distributed Environment]
-    * [RouterInstall_v1 Standalone Router]
-    * [SmrtInstall_v1 Standalone Smrt]
+    * [RouterInstall_v1 Router Standalone]
+    * [SmrtInstall_v1 Smrt Standalone]
     * [DbiInstall_v1 Database Interface]
    * [GroupSupport_v1 Group Support]
    * [RTCIFMinimal_v1 RT Plugin]
