--- a/wiki/RouterInstall_DebianSqueeze_v1.wiki
+++ b/wiki/RouterInstall_DebianSqueeze_v1.wiki
@@ -9,7 +9,7 @@ This assumes a clean install of Debian Squeeze (v6.0.x) with sudo and all base s
 = Details =
 == Dependencies ==
 ----
- # follow the [DbiInstall_DebianSqueeze_v1 libcif-dbi] install instructions
+ # follow the [DbiInstall_v1 libcif-dbi] install instructions
  # Install the following dependencies
 {{{
 $ sudo aptitude -y install apache2 apache2-threaded-dev libapache2-mod-perl2 libapache2-request-perl libapache2-mod-gnutls libapreq2-dev libapr1-dbg
