--- a/wiki/RouterInstall_DebianSqueeze_v1.wiki
+++ b/wiki/RouterInstall_DebianSqueeze_v1.wiki
@@ -14,4 +14,4 @@ This assumes a clean install of Debian Squeeze (v6.0.x) with sudo and all base s
 {{{
 $ sudo aptitude -y install apache2 apache2-threaded-dev libapache2-mod-perl2 libapache2-request-perl libapache2-mod-gnutls libapreq2-dev libapr1-dbg
 }}}
- # Continue with the cif-router [RouterInstall_v1#Package installation]
+ # Continue with the cif-router [RouterInstall_v1#Install_Package installation]
