--- a/wiki/SmrtInstall_DebianSqueeze_v1.wiki
+++ b/wiki/SmrtInstall_DebianSqueeze_v1.wiki
@@ -12,6 +12,45 @@ This assumes a clean install of Debian Squeeze (v6.0.x) with sudo and all base s
  # install the [ClientInstall_v1 client]
  # Install the following dependencies
 {{{
-$ sudo aptitude -y install 
+$ sudo aptitude -y install libexpat-dev libapache2-mod-perl2 libclass-dbi-perl libdigest-sha1-perl libnet-cidr-perl libossp-uuid-perl libxml-libxml-perl libxml2-dev libmodule-install-perl bind9 libregexp-common-perl libxml-rss-perl libunicode-string-perl libconfig-simple-perl libmime-lite-perl libfile-type-perl libtext-csv-perl libio-socket-inet6-perl libhtml-table-perl libdate-manip-perl libtry-tiny-perl libclass-accessor-perl pkg-config libnet-ssleay-perl vim libjson-xs-perl libextutils-parsexs-perl libdatetime-format-dateparse-perl libnet-patricia-perl libdatetime-perl libtext-table-perl
+}}}
+ # Install zeromq-2.2.0 from source
+{{{
+$ wget http://download.zeromq.org/zeromq-2.2.0.tar.gz
+$ tar -zxvf zeromq-2.2.0.tar.gz
+$ cd zeromq-2.2.0
+$ ./configure && make && sudo make install
+$ sudo ldconfig
+}}}
+ # Install the remaining CPAN modules
+{{{
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::Abuse::Utils,Linux::Cpuinfo,Time::HiRes,Net::Abuse::Utils::Spamhaus,Net::SSLeay,Sys::MemInfo,ZeroMQ'
+}}}
+== System Setup ==
+-----
+=== Resolver Config ===
+Configure the static interface to use 127.0.0.1 as the nameserver. Bind will be configured next. 
+
+ # edit /etc/network/interfaces
+{{{
+$ sudo vi /etc/network/interfaces
+}}}
+ # replace (or add) dns-nameservers with 127.0.0.1
+{{{
+# The primary network interface
+iface eth0 inet
+        dns-nameservers 127.0.0.1
+}}}
+ # edit /etc/resolv.conf
+{{{
+$ sudo vi /etc/resolv.conf
+}}}
+ # replace (or add) nameserver with 127.0.0.1
+{{{
+nameserver 127.0.0.1
+}}}
+ # Restart networking
+{{{
+$ sudo ifdown eth0 && sudo ifup eth0
 }}}
  # Continue with the cif-smrt [SmrtInstall_v1#Install_Package installation]
