--- a/wiki/SmrtInstall_Ubuntu12_v1.wiki
+++ b/wiki/SmrtInstall_Ubuntu12_v1.wiki
@@ -12,10 +12,13 @@ This assumes a clean install of Ubuntu 12 with sudo and all base system updates 
  # install the [ClientInstall_v1 client]
  # Install the following dependencies
 {{{
-$ sudo aptitude -y install apache2 apache2-threaded-dev libapache2-mod-perl2 libapache2-request-perl libapache2-mod-gnutls libapreq2-dev libapr1-dbg
+$ aptitude -y install rng-tools libexpat1-dev libxml-libxml-perl libxml2-dev bind9 libregexp-common-perl libxml-rss-perl libunicode-string-perl libmime-lite-perl libfile-type-perl libtext-csv-perl libio-socket-inet6-perl libdate-manip-perl libclass-accessor-perl pkg-config vim libjson-xs-perl libtime-hires-perl libencode-perl libzmq-dev libzmq1 libzeromq-perl
 }}}
 == System Setup ==
 ----
+=== Bind9 Setup ===
+ # configure [BindSetup_v1 bind]
+
 === Resolver Config ===
  # Configure the static interface to use 127.0.0.1 as the nameserver
 
