--- a/wiki/API_v1.wiki
+++ b/wiki/API_v1.wiki
@@ -12,7 +12,7 @@ The CIF API is the programming interface to the CIF architecture. This can be us
 
 CIF currently supports two styles of interfaces via the cif-router framework:
 
- * Google protocol buffers
+ * [https://developers.google.com/protocol-buffers/docs/overview Google protocol buffers]
  * raw HTTP
 
 = Details =
